--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                                             through app interface.
                                         </p>
                                           
-                                        <a href="https://github.com/Danish-uddin/smart" class="btn btn-outline-secondary btn-sm">
+                                        <a href="https://github.com/Danish-uddin/smart_parking_system" class="btn btn-outline-secondary btn-sm">
                                             View Project
                                         </a>
                                     </div>
